--- a/assets/custom.css
+++ b/assets/custom.css
@@ -47,6 +47,33 @@
   line-height:1.75rem;
 }
 
+.stickyHeader [tag-name = 'reversal-logo']{
+  display:block !important;
+}
+
+.stickyHeader [tag-name = 'logo']{
+  display:none !important;
+}
+
+[tag-name = 'reversal-logo']{
+  display:none !important;
+}
+
+#header.stickyHeader [section-name = 'localization'] select{
+  --tw-text-opacity:1;
+  color:rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+#header [section-name = 'localization'] select{
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.footer-bottom [section-name = 'localization'] select{
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 :root{
   --ft1:'Product Sans';
   --ft2:'Product Sans';
@@ -209,12 +236,7 @@
   line-height:1.75rem;
 }
 
-ns__link i{
-  font-size:1.25rem;
-  line-height:1.75rem;
-}
-
-hover{
+#siteNav ul.dropdown li a:hover{
   background-color:transparent !important;
 }
 
@@ -345,11 +367,6 @@ hover{
   margin-bottom:2rem;
 }
 
-.mx-3{
-  margin-left:0.75rem;
-  margin-right:0.75rem;
-}
-
 .\!mb-0{
   margin-bottom:0px !important;
 }
@@ -426,30 +443,6 @@ hover{
   margin-top:auto;
 }
 
-.ml-2{
-  margin-left:0.5rem;
-}
-
-.mb-12{
-  margin-bottom:3rem;
-}
-
-.mb-13{
-  margin-bottom:3.25rem;
-}
-
-.ml-12{
-  margin-left:3rem;
-}
-
-.mr-2{
-  margin-right:0.5rem;
-}
-
-.mt-20{
-  margin-top:5rem;
-}
-
 .block{
   display:block;
 }
@@ -520,26 +513,6 @@ hover{
 
 .w-full{
   width:100%;
-}
-
-.w-\[38\%\]{
-  width:38%;
-}
-
-.w-\[62\%\]{
-  width:62%;
-}
-
-.w-1\/5{
-  width:20%;
-}
-
-.w-2\/5{
-  width:40%;
-}
-
-.w-3\/5{
-  width:60%;
 }
 
 .-translate-x-1\/2{
@@ -613,10 +586,6 @@ hover{
 
 .rounded-none{
   border-radius:0px;
-}
-
-.rounded-section{
-  border-radius:3rem;
 }
 
 .border-0{
@@ -737,26 +706,6 @@ hover{
   padding-bottom:0.5rem;
 }
 
-.px-12{
-  padding-left:3rem;
-  padding-right:3rem;
-}
-
-.\!px-7{
-  padding-left:1.75rem !important;
-  padding-right:1.75rem !important;
-}
-
-.\!py-3{
-  padding-top:0.75rem !important;
-  padding-bottom:0.75rem !important;
-}
-
-.py-20{
-  padding-top:5rem;
-  padding-bottom:5rem;
-}
-
 .pb-0{
   padding-bottom:0px;
 }
@@ -785,6 +734,14 @@ hover{
   padding-bottom:2.25rem;
 }
 
+.pl-2{
+  padding-left:0.5rem;
+}
+
+.pr-6{
+  padding-right:1.5rem;
+}
+
 .pt-0{
   padding-top:0px;
 }
@@ -807,10 +764,6 @@ hover{
 
 .pt-9{
   padding-top:2.25rem;
-}
-
-.pt-12{
-  padding-top:3rem;
 }
 
 .text-left{
@@ -859,29 +812,6 @@ hover{
 .text-xl{
   font-size:1.25rem;
   line-height:1.75rem;
-}
-
-.text-4xl{
-  font-size:2.25rem;
-  line-height:2.5rem;
-}
-
-.text-\[1\.25rem\]{
-  font-size:1.25rem;
-}
-
-.text-\[2\.625rem\]{
-  font-size:2.625rem;
-}
-
-.text-1_5xl{
-  font-size:1.375rem;
-  line-height:1.875rem;
-}
-
-.text-4_5xl{
-  font-size:2.5rem;
-  line-height:3rem;
 }
 
 .font-bold{
@@ -1110,8 +1040,8 @@ hover{
     display:flex;
   }
 
-  .md\:w-1\/5{
-    width:20%;
+  .md\:w-1\/4{
+    width:25%;
   }
 
   .md\:w-2\/5{
@@ -1132,10 +1062,6 @@ hover{
 
   .md\:w-auto{
     width:auto;
-  }
-
-  .md\:w-1\/4{
-    width:25%;
   }
 
   .md\:flex-row{
@@ -1250,12 +1176,12 @@ hover{
     height:33vw;
   }
 
-  .lg\:w-\[33vw\]{
-    width:33vw;
-  }
-
   .lg\:w-1\/5{
     width:20%;
+  }
+
+  .lg\:w-\[33vw\]{
+    width:33vw;
   }
 
   .lg\:pl-16{
