--- a/assets/custom.css
+++ b/assets/custom.css
@@ -47,29 +47,41 @@
   line-height:1.75rem;
 }
 
-.stickyHeader [tag-name = 'reversal-logo']{
+body:not(.template-product) .stickyHeader [tag-name = 'reversal-logo']{
   display:block !important;
 }
 
-.stickyHeader [tag-name = 'logo']{
+body:not(.template-product) .stickyHeader [tag-name = 'logo']{
   display:none !important;
 }
 
-[tag-name = 'reversal-logo']{
+body:not(.template-product) #header:not(.stickyHeader) [tag-name = 'logo']{
+  display:block;
+}
+
+body:not(.template-product) #header:not(.stickyHeader) [tag-name = 'reversal-logo']{
   display:none !important;
 }
 
-#header.stickyHeader [section-name = 'localization'] select{
+body.template-product #header:not(.stickyHeader) [tag-name = 'reversal-logo']{
+  display:block !important;
+}
+
+body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
+  display:none !important;
+}
+
+.template-index #header.stickyHeader [section-name = 'localization'] select{
   --tw-text-opacity:1;
   color:rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-#header [section-name = 'localization'] select{
+.template-index #header [section-name = 'localization'] select{
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.footer-bottom [section-name = 'localization'] select{
+.template-index .footer-bottom [section-name = 'localization'] select{
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -295,6 +307,16 @@
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+[tag-name = 'tabs-wrapper'] >p.active{
+  border-width:0px;
+  border-bottom-width:4px;
+  border-style:solid;
+  --tw-border-opacity:1;
+  border-color:rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .visible{
   visibility:visible;
 }
@@ -352,6 +374,11 @@
   margin-right:0.25rem;
 }
 
+.mx-4{
+  margin-left:1rem;
+  margin-right:1rem;
+}
+
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
@@ -365,6 +392,11 @@
 .my-8{
   margin-top:2rem;
   margin-bottom:2rem;
+}
+
+.mx-6{
+  margin-left:1.5rem;
+  margin-right:1.5rem;
 }
 
 .\!mb-0{
@@ -626,8 +658,17 @@
   background-color:transparent !important;
 }
 
+.bg-black-800{
+  --tw-bg-opacity:1;
+  background-color:rgb(34 34 34 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b{
   background-image:linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-none{
+  background-image:none;
 }
 
 .from-white{
@@ -704,6 +745,21 @@
 .py-2{
   padding-top:0.5rem;
   padding-bottom:0.5rem;
+}
+
+.py-4{
+  padding-top:1rem;
+  padding-bottom:1rem;
+}
+
+.px-6{
+  padding-left:1.5rem;
+  padding-right:1.5rem;
+}
+
+.py-3{
+  padding-top:0.75rem;
+  padding-bottom:0.75rem;
 }
 
 .pb-0{
@@ -822,6 +878,10 @@
   font-weight:500;
 }
 
+.font-semibold{
+  font-weight:600;
+}
+
 .capitalize{
   text-transform:capitalize;
 }
@@ -838,6 +898,11 @@
 .text-black-400{
   --tw-text-opacity:1;
   color:rgb(170 170 170 / var(--tw-text-opacity));
+}
+
+.text-black-500{
+  --tw-text-opacity:1;
+  color:rgb(136 136 136 / var(--tw-text-opacity));
 }
 
 .text-black-600{
