--- a/assets/custom.css
+++ b/assets/custom.css
@@ -307,16 +307,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-[tag-name = 'tabs-wrapper'] >p.active{
-  border-width:0px;
-  border-bottom-width:4px;
-  border-style:solid;
-  --tw-border-opacity:1;
-  border-color:rgb(255 255 255 / var(--tw-border-opacity));
-  --tw-text-opacity:1;
-  color:rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .visible{
   visibility:visible;
 }
@@ -372,11 +362,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .mx-1{
   margin-left:0.25rem;
   margin-right:0.25rem;
-}
-
-.mx-4{
-  margin-left:1rem;
-  margin-right:1rem;
 }
 
 .mx-auto{
@@ -461,6 +446,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .mt-14{
   margin-top:3.5rem;
+}
+
+.mt-24{
+  margin-top:6rem;
 }
 
 .mt-4{
@@ -654,6 +643,21 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-color:rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-black-600{
+  --tw-border-opacity:1;
+  border-color:rgb(102 102 102 / var(--tw-border-opacity));
+}
+
+.border-black-500{
+  --tw-border-opacity:1;
+  border-color:rgb(136 136 136 / var(--tw-border-opacity));
+}
+
+.border-black-400{
+  --tw-border-opacity:1;
+  border-color:rgb(170 170 170 / var(--tw-border-opacity));
+}
+
 .\!bg-transparent{
   background-color:transparent !important;
 }
@@ -745,11 +749,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .py-2{
   padding-top:0.5rem;
   padding-bottom:0.5rem;
-}
-
-.py-4{
-  padding-top:1rem;
-  padding-bottom:1rem;
 }
 
 .px-6{
@@ -900,11 +899,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(170 170 170 / var(--tw-text-opacity));
 }
 
-.text-black-500{
-  --tw-text-opacity:1;
-  color:rgb(136 136 136 / var(--tw-text-opacity));
-}
-
 .text-black-600{
   --tw-text-opacity:1;
   color:rgb(102 102 102 / var(--tw-text-opacity));
@@ -918,6 +912,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .text-white{
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black-500{
+  --tw-text-opacity:1;
+  color:rgb(136 136 136 / var(--tw-text-opacity));
 }
 
 .opacity-0{
