--- a/assets/custom.css
+++ b/assets/custom.css
@@ -307,6 +307,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+[tag-name = 'tabs-wrapper'] >p.active{
+  border-width:0px;
+  border-bottom-width:4px;
+  border-style:solid;
+  --tw-border-opacity:1;
+  border-color:rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .visible{
   visibility:visible;
 }
@@ -347,6 +357,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   top:2rem;
 }
 
+.left-2{
+  left:0.5rem;
+}
+
+.top-2{
+  top:0.5rem;
+}
+
 .z-20{
   z-index:20;
 }
@@ -364,6 +382,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-right:0.25rem;
 }
 
+.mx-6{
+  margin-left:1.5rem;
+  margin-right:1.5rem;
+}
+
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
@@ -379,9 +402,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-bottom:2rem;
 }
 
-.mx-6{
-  margin-left:1.5rem;
-  margin-right:1.5rem;
+.mx-2{
+  margin-left:0.5rem;
+  margin-right:0.5rem;
 }
 
 .\!mb-0{
@@ -464,6 +487,22 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:auto;
 }
 
+.mr-3{
+  margin-right:0.75rem;
+}
+
+.mb-13{
+  margin-bottom:3.25rem;
+}
+
+.mt-2{
+  margin-top:0.5rem;
+}
+
+.mb-12{
+  margin-bottom:3rem;
+}
+
 .block{
   display:block;
 }
@@ -534,6 +573,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .w-full{
   width:100%;
+}
+
+.w-11{
+  width:2.75rem;
+}
+
+.w-16{
+  width:4rem;
 }
 
 .-translate-x-1\/2{
@@ -609,6 +656,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-radius:0px;
 }
 
+.rounded-2xl{
+  border-radius:1rem;
+}
+
 .border-0{
   border-width:0px;
 }
@@ -638,24 +689,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-color:rgb(204 204 204 / var(--tw-border-opacity));
 }
 
-.border-white{
-  --tw-border-opacity:1;
-  border-color:rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-black-600{
-  --tw-border-opacity:1;
-  border-color:rgb(102 102 102 / var(--tw-border-opacity));
-}
-
-.border-black-500{
-  --tw-border-opacity:1;
-  border-color:rgb(136 136 136 / var(--tw-border-opacity));
-}
-
 .border-black-400{
   --tw-border-opacity:1;
   border-color:rgb(170 170 170 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity:1;
+  border-color:rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .\!bg-transparent{
@@ -665,6 +706,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .bg-black-800{
   --tw-bg-opacity:1;
   background-color:rgb(34 34 34 / var(--tw-bg-opacity));
+}
+
+.bg-black-900{
+  --tw-bg-opacity:1;
+  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -736,6 +782,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-right:1.25rem;
 }
 
+.px-6{
+  padding-left:1.5rem;
+  padding-right:1.5rem;
+}
+
 .py-1{
   padding-top:0.25rem;
   padding-bottom:0.25rem;
@@ -751,14 +802,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:0.5rem;
 }
 
-.px-6{
-  padding-left:1.5rem;
-  padding-right:1.5rem;
-}
-
 .py-3{
   padding-top:0.75rem;
   padding-bottom:0.75rem;
+}
+
+.px-8{
+  padding-left:2rem;
+  padding-right:2rem;
+}
+
+.px-1{
+  padding-left:0.25rem;
+  padding-right:0.25rem;
 }
 
 .pb-0{
@@ -775,6 +831,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .pb-24{
   padding-bottom:6rem;
+}
+
+.pb-4{
+  padding-bottom:1rem;
 }
 
 .pb-5{
@@ -819,6 +879,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .pt-9{
   padding-top:2.25rem;
+}
+
+.pb-8{
+  padding-bottom:2rem;
 }
 
 .text-left{
@@ -869,6 +933,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   line-height:1.75rem;
 }
 
+.text-xs{
+  font-size:0.75rem;
+  line-height:1rem;
+}
+
 .font-bold{
   font-weight:700;
 }
@@ -881,8 +950,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   font-weight:600;
 }
 
+.\!font-semibold{
+  font-weight:600 !important;
+}
+
 .capitalize{
   text-transform:capitalize;
+}
+
+.normal-case{
+  text-transform:none;
+}
+
+.\!normal-case{
+  text-transform:none !important;
 }
 
 .italic{
@@ -899,9 +980,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(170 170 170 / var(--tw-text-opacity));
 }
 
+.text-black-500{
+  --tw-text-opacity:1;
+  color:rgb(136 136 136 / var(--tw-text-opacity));
+}
+
 .text-black-600{
   --tw-text-opacity:1;
   color:rgb(102 102 102 / var(--tw-text-opacity));
+}
+
+.text-black-700{
+  --tw-text-opacity:1;
+  color:rgb(68 68 68 / var(--tw-text-opacity));
 }
 
 .text-black-900{
@@ -914,9 +1005,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-black-500{
-  --tw-text-opacity:1;
-  color:rgb(136 136 136 / var(--tw-text-opacity));
+.line-through{
+  text-decoration-line:line-through;
 }
 
 .opacity-0{
@@ -934,6 +1024,54 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .shadow-none{
   --tw-shadow:0 0 #0000;
   --tw-shadow-colored:0 0 #0000;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[inset_0px_0px_0px_2px_white\]{
+  --tw-shadow:inset 0px 0px 0px 2px white;
+  --tw-shadow-colored:inset 0px 0px 0px 2px var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.\!shadow-\[inset_0px_0px_0px_2px_white\]{
+  --tw-shadow:inset 0px 0px 0px 2px white !important;
+  --tw-shadow-colored:inset 0px 0px 0px 2px var(--tw-shadow-color) !important;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.\!shadow-\[inset_0px_0px_0px_3px_white\]{
+  --tw-shadow:inset 0px 0px 0px 3px white !important;
+  --tw-shadow-colored:inset 0px 0px 0px 3px var(--tw-shadow-color) !important;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.\!shadow-\[inset_0px_0px_0px_4px_white\]{
+  --tw-shadow:inset 0px 0px 0px 4px white !important;
+  --tw-shadow-colored:inset 0px 0px 0px 4px var(--tw-shadow-color) !important;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.\!shadow-\[inset_0px_0px_0px_3\.5px_white\]{
+  --tw-shadow:inset 0px 0px 0px 3.5px white !important;
+  --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.shadow-lg{
+  --tw-shadow:0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored:0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm{
+  --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow{
+  --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1022,8 +1160,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-left:0px;
 }
 
+.first\:pl-0:first-child{
+  padding-left:0px;
+}
+
 .last\:mr-0:last-child{
   margin-right:0px;
+}
+
+.last\:pr-0:last-child{
+  padding-right:0px;
 }
 
 .hover\:opacity-90:hover{
