--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1396,25 +1396,25 @@ s.psinglePrice { font-size:calc(var(--fsm) - 3px); font-weight:400; margin-right
   .product-form .swatch { margin-bottom:15px; padding-left:5px; padding-right:5px; width:100%; }
   .product-form .swatch label.header { margin-bottom:8px; text-transform:uppercase; }
 
-  .swatch-element { margin:0 8px 5px 0; position:relative; line-height:1; }
-  .swatch-element .swatchLbl { color:{{settings.swatch_txt}}; font-size:13px; font-weight:400; line-height:32px; text-align:center; margin:0; overflow: hidden;
-      min-width:35px; height:35px; padding:0 14px; background-color:{{settings.swatch_bg}}; border:2px solid #fff; border-radius:{{settings.swbdr}}px;
+  .swatch-element { margin:0 16px 5px 0; position:relative; line-height:1; }
+  .swatch-element .swatchLbl { color:{{settings.swatch_txt}}; font-size:16px; font-weight:400; line-height:30px; text-align:center; margin:0; overflow: hidden;
+      min-width:30px; height:30px; padding:0 14px; background-color:{{settings.swatch_bg}}; border:1px solid #000; border-radius:{{settings.swbdr}}px;
   }
   .swatch-element .color { padding:0; background-repeat:no-repeat; background-position:{{ settings.v_bg_position}}; background-size:cover;
-      border:2px solid #fff; box-shadow:0 0 0 1px #ddd;
+      border:1px solid #eee; box-shadow:0 0 0 1px #ddd;
       {% if settings.sw_size == "medium" %}
           width:50px; height:50px;
       {% elsif settings.sw_size == "large" %}
           width:70px; height:70px;
       {% else %}
-          width:35px; height:35px;
+          width:30px; height:30px;
       {% endif %}
   }
 {% if settings.var_style %}
     .swatch-element .swatchLbl:not(.color) { border-radius:0; }
 {% endif %}
   
-  .swatch-element .swatchInput:checked + .swatchLbl { border:2px solid {{ settings.ac_swatch_bdr}}; background-color:{{settings.ac_swatch_bg}}; color:{{settings.ac_swatch_txt}}; box-shadow:none; }
+  .swatch-element .swatchInput:checked + .swatchLbl { border:1px solid {{ settings.ac_swatch_bdr}}; background-color:{{settings.ac_swatch_bg}}; color:{{settings.ac_swatch_txt}}; box-shadow:none; }
   .swatch-element.soldout .swatchLbl { text-decoration:line-through; opacity:0.5; cursor:no-drop; }
   .swatch-element.soldout .color:after { content:""; display:block; width:100%; height:100%; background:url({{ 'soldout.png' | asset_url}}) no-repeat 50% 50%/cover; }
 
