--- a/assets/themeRtl.css.liquid
+++ b/assets/themeRtl.css.liquid
@@ -1504,21 +1504,21 @@ s.psinglePrice { font-size:calc(var(--fsm) - 3px); font-weight:400; margin-right
 
   .swatch-element { margin:0 0 5px 8px; position:relative; line-height:1; }
   .swatch-element .swatchLbl { color:{{settings.swatch_txt}}; font-size:12px; font-weight:400; line-height:32px; text-align:center; margin:0;
-      min-width:35px; height:35px; padding:0 10px; background-color:{{settings.swatch_bg}}; border:2px solid transparent; border-radius:{{settings.swbdr}}px; }
+      min-width:30px; height:35px; padding:0 10px; background-color:{{settings.swatch_bg}}; border:2px solid transparent; border-radius:{{settings.swbdr}}px; }
   .swatch-element .swatchLbl.square-only { border-radius:0; }
 
   .swatch-element .color { padding:0; background-repeat:no-repeat; background-position:{{ settings.v_bg_position}}; background-size:cover;
-      border:2px solid #fff; box-shadow:0 0 0 1px #ddd;
+      border:1px solid #eee; box-shadow:0 0 0 1px #ddd;
       {% if settings.sw_size == "medium" %}
           width:50px; height:50px;
       {% elsif settings.sw_size == "large" %}
           width:70px; height:70px;
       {% else %}
-          width:35px; height:35px;
+          width:30px; height:30px;
       {% endif %}
   }
 
-  .swatch-element .swatchInput:checked + .swatchLbl { border:2px solid {{ settings.ac_swatch_bdr}}; background-color:{{settings.ac_swatch_bg}}; color:{{settings.ac_swatch_txt}}; box-shadow:none; }
+  .swatch-element .swatchInput:checked + .swatchLbl { border:1px solid {{ settings.ac_swatch_bdr}}; background-color:{{settings.ac_swatch_bg}}; color:{{settings.ac_swatch_txt}}; box-shadow:none; }
   .swatch-element.soldout .swatchLbl { text-decoration:line-through; opacity:0.5; cursor:no-drop; }
   .swatch-element.soldout .color:after { content:""; display:block; width:100%; height:100%; background:url({{ 'soldout.png' | asset_url}}) no-repeat 50% 50%/cover; }
 
