--- a/assets/custom.css
+++ b/assets/custom.css
@@ -307,7 +307,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-[tag-name = 'tabs-wrapper'] >p.active{
+[section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >p.active{
   border-width:0px;
   border-bottom-width:4px;
   border-style:solid;
@@ -341,12 +341,24 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   left:50%;
 }
 
+.left-2{
+  left:0.5rem;
+}
+
 .left-4{
   left:1rem;
 }
 
 .right-4{
   right:1rem;
+}
+
+.top-0{
+  top:0px;
+}
+
+.top-2{
+  top:0.5rem;
 }
 
 .top-4{
@@ -357,16 +369,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   top:2rem;
 }
 
-.left-2{
-  left:0.5rem;
-}
-
-.top-2{
-  top:0.5rem;
-}
-
 .z-20{
   z-index:20;
+}
+
+.z-50{
+  z-index:50;
 }
 
 .\!m-0{
@@ -380,6 +388,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .mx-1{
   margin-left:0.25rem;
   margin-right:0.25rem;
+}
+
+.mx-2{
+  margin-left:0.5rem;
+  margin-right:0.5rem;
 }
 
 .mx-6{
@@ -402,11 +415,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-bottom:2rem;
 }
 
-.mx-2{
-  margin-left:0.5rem;
-  margin-right:0.5rem;
-}
-
 .\!mb-0{
   margin-bottom:0px !important;
 }
@@ -421,6 +429,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .mb-10{
   margin-bottom:2.5rem;
+}
+
+.mb-12{
+  margin-bottom:3rem;
 }
 
 .mb-2{
@@ -471,6 +483,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:3.5rem;
 }
 
+.mt-2{
+  margin-top:0.5rem;
+}
+
 .mt-24{
   margin-top:6rem;
 }
@@ -483,24 +499,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:1.5rem;
 }
 
+.mt-8{
+  margin-top:2rem;
+}
+
 .mt-auto{
   margin-top:auto;
-}
-
-.mr-3{
-  margin-right:0.75rem;
-}
-
-.mb-13{
-  margin-bottom:3.25rem;
-}
-
-.mt-2{
-  margin-top:0.5rem;
-}
-
-.mb-12{
-  margin-bottom:3rem;
 }
 
 .block{
@@ -559,6 +563,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   width:33.333333%;
 }
 
+.w-16{
+  width:4rem;
+}
+
 .w-2\/3{
   width:66.666667%;
 }
@@ -573,14 +581,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .w-full{
   width:100%;
-}
-
-.w-11{
-  width:2.75rem;
-}
-
-.w-16{
-  width:4rem;
 }
 
 .-translate-x-1\/2{
@@ -644,6 +644,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-radius:0.25rem;
 }
 
+.rounded-2xl{
+  border-radius:1rem;
+}
+
 .rounded-3xl{
   border-radius:1.5rem;
 }
@@ -654,10 +658,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .rounded-none{
   border-radius:0px;
-}
-
-.rounded-2xl{
-  border-radius:1rem;
 }
 
 .border-0{
@@ -689,11 +689,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-color:rgb(204 204 204 / var(--tw-border-opacity));
 }
 
-.border-black-400{
-  --tw-border-opacity:1;
-  border-color:rgb(170 170 170 / var(--tw-border-opacity));
-}
-
 .border-white{
   --tw-border-opacity:1;
   border-color:rgb(255 255 255 / var(--tw-border-opacity));
@@ -701,6 +696,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .\!bg-transparent{
   background-color:transparent !important;
+}
+
+.bg-\[\#f5f5f5\]{
+  --tw-bg-opacity:1;
+  background-color:rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .bg-black-800{
@@ -807,14 +807,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:0.75rem;
 }
 
-.px-8{
-  padding-left:2rem;
-  padding-right:2rem;
+.py-4{
+  padding-top:1rem;
+  padding-bottom:1rem;
 }
 
-.px-1{
-  padding-left:0.25rem;
-  padding-right:0.25rem;
+.px-10{
+  padding-left:2.5rem;
+  padding-right:2.5rem;
+}
+
+.px-12{
+  padding-left:3rem;
+  padding-right:3rem;
 }
 
 .pb-0{
@@ -881,8 +886,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-top:2.25rem;
 }
 
-.pb-8{
-  padding-bottom:2rem;
+.pl-5{
+  padding-left:1.25rem;
+}
+
+.pr-5{
+  padding-right:1.25rem;
+}
+
+.pl-10{
+  padding-left:2.5rem;
+}
+
+.pr-10{
+  padding-right:2.5rem;
 }
 
 .text-left{
@@ -938,6 +955,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   line-height:1rem;
 }
 
+.\!font-semibold{
+  font-weight:600 !important;
+}
+
 .font-bold{
   font-weight:700;
 }
@@ -950,16 +971,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   font-weight:600;
 }
 
-.\!font-semibold{
-  font-weight:600 !important;
-}
-
 .capitalize{
   text-transform:capitalize;
-}
-
-.normal-case{
-  text-transform:none;
 }
 
 .\!normal-case{
@@ -990,11 +1003,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(102 102 102 / var(--tw-text-opacity));
 }
 
-.text-black-700{
-  --tw-text-opacity:1;
-  color:rgb(68 68 68 / var(--tw-text-opacity));
-}
-
 .text-black-900{
   --tw-text-opacity:1;
   color:rgb(0 0 0 / var(--tw-text-opacity));
@@ -1021,57 +1029,21 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   opacity:0.6;
 }
 
-.shadow-none{
-  --tw-shadow:0 0 #0000;
-  --tw-shadow-colored:0 0 #0000;
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[inset_0px_0px_0px_2px_white\]{
-  --tw-shadow:inset 0px 0px 0px 2px white;
-  --tw-shadow-colored:inset 0px 0px 0px 2px var(--tw-shadow-color);
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.\!shadow-\[inset_0px_0px_0px_2px_white\]{
-  --tw-shadow:inset 0px 0px 0px 2px white !important;
-  --tw-shadow-colored:inset 0px 0px 0px 2px var(--tw-shadow-color) !important;
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
-}
-
-.\!shadow-\[inset_0px_0px_0px_3px_white\]{
-  --tw-shadow:inset 0px 0px 0px 3px white !important;
-  --tw-shadow-colored:inset 0px 0px 0px 3px var(--tw-shadow-color) !important;
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
-}
-
-.\!shadow-\[inset_0px_0px_0px_4px_white\]{
-  --tw-shadow:inset 0px 0px 0px 4px white !important;
-  --tw-shadow-colored:inset 0px 0px 0px 4px var(--tw-shadow-color) !important;
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
-}
-
 .\!shadow-\[inset_0px_0px_0px_3\.5px_white\]{
   --tw-shadow:inset 0px 0px 0px 3.5px white !important;
   --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
-.shadow-lg{
-  --tw-shadow:0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored:0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-sm{
-  --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow{
   --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-none{
+  --tw-shadow:0 0 #0000;
+  --tw-shadow-colored:0 0 #0000;
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1160,16 +1132,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-left:0px;
 }
 
-.first\:pl-0:first-child{
-  padding-left:0px;
-}
-
 .last\:mr-0:last-child{
   margin-right:0px;
-}
-
-.last\:pr-0:last-child{
-  padding-right:0px;
 }
 
 .hover\:opacity-90:hover{
