--- a/snippets/product-tabs-nav.liquid
+++ b/snippets/product-tabs-nav.liquid
@@ -1,6 +1,6 @@
 {% comment %} todo 可配置 {% endcomment %}
 {%- capture productTabs -%}
-  <div section-name="product-tabs" class="bg-black-800">
+  <div section-name="product-tabs-nav" class="bg-black-800 z-50 fixed w-full top-0 hidden">
       <div class="page-width mx-auto items-center">
         <div class="flex justify-between text-white">
           <div class="mb-0 text-lg font-semibold py-3 flex items-center">EC1-ST</div>
