--- a/assets/custom.css
+++ b/assets/custom.css
@@ -307,7 +307,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-[section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >p.active{
+[tag-name = 'tabs-wrapper'] >p.active{
   border-width:0px;
   border-bottom-width:4px;
   border-style:solid;
@@ -353,10 +353,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   right:1rem;
 }
 
-.top-0{
-  top:0px;
-}
-
 .top-2{
   top:0.5rem;
 }
@@ -367,6 +363,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .top-8{
   top:2rem;
+}
+
+.top-0{
+  top:0px;
 }
 
 .z-20{
@@ -395,11 +395,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-right:0.5rem;
 }
 
-.mx-6{
-  margin-left:1.5rem;
-  margin-right:1.5rem;
-}
-
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
@@ -413,6 +408,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .my-8{
   margin-top:2rem;
   margin-bottom:2rem;
+}
+
+.mx-6{
+  margin-left:1.5rem;
+  margin-right:1.5rem;
 }
 
 .\!mb-0{
@@ -499,12 +499,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:1.5rem;
 }
 
-.mt-8{
-  margin-top:2rem;
-}
-
 .mt-auto{
   margin-top:auto;
+}
+
+.mt-8{
+  margin-top:2rem;
 }
 
 .block{
@@ -698,9 +698,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   background-color:transparent !important;
 }
 
-.bg-\[\#f5f5f5\]{
+.bg-black-900{
   --tw-bg-opacity:1;
-  background-color:rgb(245 245 245 / var(--tw-bg-opacity));
+  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-black-800{
@@ -708,9 +708,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   background-color:rgb(34 34 34 / var(--tw-bg-opacity));
 }
 
-.bg-black-900{
+.bg-\[\#f5f5f5\]{
   --tw-bg-opacity:1;
-  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color:rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -807,19 +807,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:0.75rem;
 }
 
-.py-4{
-  padding-top:1rem;
-  padding-bottom:1rem;
-}
-
-.px-10{
-  padding-left:2.5rem;
-  padding-right:2.5rem;
-}
-
 .px-12{
   padding-left:3rem;
   padding-right:3rem;
+}
+
+.py-4{
+  padding-top:1rem;
+  padding-bottom:1rem;
 }
 
 .pb-0{
@@ -854,8 +849,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:2.25rem;
 }
 
+.pl-10{
+  padding-left:2.5rem;
+}
+
 .pl-2{
   padding-left:0.5rem;
+}
+
+.pr-10{
+  padding-right:2.5rem;
 }
 
 .pr-6{
@@ -884,22 +887,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .pt-9{
   padding-top:2.25rem;
-}
-
-.pl-5{
-  padding-left:1.25rem;
-}
-
-.pr-5{
-  padding-right:1.25rem;
-}
-
-.pl-10{
-  padding-left:2.5rem;
-}
-
-.pr-10{
-  padding-right:2.5rem;
 }
 
 .text-left{
