--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -302,7 +302,7 @@
                 {%- assign product_form_id = 'product-form-' | append: section.id -%}
                 <product-form class="db productForm mb{{blkSt.bm}}" {{ block.shopify_attributes }}>
                     {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
-                        <div class="product-form mfp-link fl f-aie f-wrap mb-7">
+                        <div class="product-form mfp-link fl f-aie f-wrap mb-4">
                             {% assign isSwatch = false %}
                             {% assign hideSoldout = settings.swsold %}
                             {%- unless product.options.size == 1 and product.variants[0].title == 'Default Title' -%}
@@ -543,6 +543,8 @@
             {% render 'more-colors', product: product, sectionId: section.id, block: block.settings %}
         {%- when 'colimg' -%}
             {% render 'product-column-img', product: product, sectionId: section.id, block: block.settings %}
+        {%- when 'giveaways' -%}
+            {% render 'product-giveaways', product: product, sectionId: section.id, block: block.settings %}
         {%- when '@app' -%}
             {% render block %}
         {% endcase %}
@@ -1355,44 +1357,73 @@
 			]
 		},
 		{
-			"type": "colimg",
-			"name": "Column img",
-            "limit": 1,
-			"settings": [
-				{ 
-					"type":"text",
-					"id":"text1",
-					"label":"First content",
-					"default":"Free shipping"
-				},     
-				{ 
-					"type":"text",
-					"id":"text2",
-					"label":"Second content",
-					"default":"VAT included"
-				},     
-				{ 
-					"type":"text",
-					"id":"text3",
-					"label":"Third content",
-					"default":"2-year warranty"
-				},     
-				{ 
-					"type":"image_picker",
-					"id":"icon1",
-					"label":"First icon"
-				},     
-				{ 
-					"type":"image_picker",
-					"id":"icon2",
-					"label":"Second icon"
-				},     
-				{ 
-					"type":"image_picker",
-					"id":"icon3",
-					"label":"Third icon"
-				}
-			]
+		"type": "colimg",
+		"name": "Column img",
+		"limit": 1,
+		"settings": [
+			{ 
+				"type":"text",
+				"id":"text1",
+				"label":"First content",
+				"default":"Free shipping"
+			},     
+			{ 
+				"type":"text",
+				"id":"text2",
+				"label":"Second content",
+				"default":"VAT included"
+			},     
+			{ 
+				"type":"text",
+				"id":"text3",
+				"label":"Third content",
+				"default":"2-year warranty"
+			},     
+			{ 
+				"type":"image_picker",
+				"id":"icon1",
+				"label":"First icon"
+			},     
+			{ 
+				"type":"image_picker",
+				"id":"icon2",
+				"label":"Second icon"
+			},     
+			{ 
+				"type":"image_picker",
+				"id":"icon3",
+				"label":"Third icon"
+			}
+		]
+		},
+		{
+		"type": "giveaways",
+		"name": "Giveaways",
+		"settings": [
+			{ 
+				"type":"text",
+				"id":"title",
+				"label":"Title",
+				"default":"Fender Set"
+			},
+			{ 
+				"type":"text",
+				"id":"price",
+				"label":"Price",
+				"default":"45"
+			},
+			{ 
+				"type":"text",
+				"id":"tag",
+				"label":"tag",
+				"default":"FREE"
+			},
+			{ 
+				"type":"image_picker",
+				"id": "Image",
+				"label": "Image"
+			}
+		]
 		},
 		{
 			"type": "coltabs",
