--- a/snippets/product-giveaways.liquid
+++ b/snippets/product-giveaways.liquid
@@ -1,5 +1,5 @@
 {%- capture productTabs -%}
-<div section-name="product-column-img" class="mt-8 rounded-2xl overflow-hidden">
+<div section-name="product-giveaways" class="mt-8 rounded-2xl overflow-hidden">
   <div class="bg-[#f5f5f5] py-4 px-12">
     <ul class="flex text-sm justify-between">
     {% assign pClass = 'text-center' %}
