产品图片轮播优化

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1314,7 +1314,7 @@ ul.flOpt li.disabled { opacity:0.5; cursor:default; }
 .thumbs_nav { width:100%; margin-top:10px; }
 .pr_thumbsWr { overflow-y:hidden; overflow-x:scroll; -ms-user-select:none; user-select:none; scrollbar-width:none; scroll-behavior:smooth; -ms-overflow-style:-ms-autohiding-scrollbar; }
 .pr_thumbs { white-space:nowrap; }
-.pr_thumbs_item { display:inline-block; width:80px; margin:0 5px; vertical-align:top; }
+.pr_thumbs_item { display:inline-block; width:14.5%; margin:0 0.85%; vertical-align:top;border:solid 1px  }
 @media only screen and (min-width:768px){
     .thumbs_nav:not(.bottom) { width:80px; margin-top:0; }
     .thumbs_nav:not(.bottom) .pr_thumbs { display:flex; position:absolute; top:0; left:0; right:0; bottom:0;
