--- a/assets/custom.css
+++ b/assets/custom.css
@@ -307,7 +307,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-[tag-name = 'tabs-wrapper'] >p.active{
+[section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >p.active{
   border-width:0px;
   border-bottom-width:4px;
   border-style:solid;
@@ -353,6 +353,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   right:1rem;
 }
 
+.top-0{
+  top:0px;
+}
+
 .top-2{
   top:0.5rem;
 }
@@ -363,10 +367,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .top-8{
   top:2rem;
-}
-
-.top-0{
-  top:0px;
 }
 
 .z-20{
@@ -395,6 +395,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-right:0.5rem;
 }
 
+.mx-6{
+  margin-left:1.5rem;
+  margin-right:1.5rem;
+}
+
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
@@ -408,11 +413,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .my-8{
   margin-top:2rem;
   margin-bottom:2rem;
-}
-
-.mx-6{
-  margin-left:1.5rem;
-  margin-right:1.5rem;
 }
 
 .\!mb-0{
@@ -491,6 +491,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:6rem;
 }
 
+.mt-3{
+  margin-top:0.75rem;
+}
+
 .mt-4{
   margin-top:1rem;
 }
@@ -499,16 +503,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:1.5rem;
 }
 
-.mt-auto{
-  margin-top:auto;
-}
-
 .mt-8{
   margin-top:2rem;
 }
 
+.mt-auto{
+  margin-top:auto;
+}
+
 .block{
   display:block;
+}
+
+.inline-block{
+  display:inline-block;
 }
 
 .inline{
@@ -656,8 +664,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-radius:9999px;
 }
 
+.rounded-md{
+  border-radius:0.375rem;
+}
+
 .rounded-none{
   border-radius:0px;
+}
+
+.rounded-sm{
+  border-radius:0.125rem;
+}
+
+.border{
+  border-width:1px;
 }
 
 .border-0{
@@ -684,6 +704,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-style:none;
 }
 
+.border-black-200{
+  --tw-border-opacity:1;
+  border-color:rgb(238 238 238 / var(--tw-border-opacity));
+}
+
 .border-black-300{
   --tw-border-opacity:1;
   border-color:rgb(204 204 204 / var(--tw-border-opacity));
@@ -698,14 +723,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   background-color:transparent !important;
 }
 
+.bg-black-800{
+  --tw-bg-opacity:1;
+  background-color:rgb(34 34 34 / var(--tw-bg-opacity));
+}
+
 .bg-black-900{
   --tw-bg-opacity:1;
   background-color:rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-black-800{
+.bg-vi{
   --tw-bg-opacity:1;
-  background-color:rgb(34 34 34 / var(--tw-bg-opacity));
+  background-color:rgb(246 190 0 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#f5f5f5\]{
@@ -753,6 +783,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding:0px;
 }
 
+.p-2{
+  padding:0.5rem;
+}
+
+.p-4{
+  padding:1rem;
+}
+
 .p-8{
   padding:2rem;
 }
@@ -760,6 +798,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .\!py-2{
   padding-top:0.5rem !important;
   padding-bottom:0.5rem !important;
+}
+
+.px-12{
+  padding-left:3rem;
+  padding-right:3rem;
 }
 
 .px-2{
@@ -807,9 +850,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:0.75rem;
 }
 
-.px-12{
-  padding-left:3rem;
-  padding-right:3rem;
+.py-6{
+  padding-top:1.5rem;
+  padding-bottom:1.5rem;
 }
 
 .py-4{
@@ -889,6 +932,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-top:2.25rem;
 }
 
+.pl-0{
+  padding-left:0px;
+}
+
+.pr-0{
+  padding-right:0px;
+}
+
 .text-left{
   text-align:left;
 }
@@ -948,6 +999,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .font-bold{
   font-weight:700;
+}
+
+.font-extrabold{
+  font-weight:800;
 }
 
 .font-medium{
