--- a/snippets/product-column-img.liquid
+++ b/snippets/product-column-img.liquid
@@ -1,18 +1,18 @@
 {%- capture productTabs -%}
-<div section-name="product-column-img" class="mt-8 rounded-2xl overflow-hidden">
-  <div class="bg-[#f5f5f5] py-4 px-12">
+<div section-name="product-column-img" class="mt-8 rounded-md overflow-hidden border-solid border border-black-200">
+  <div class="py-6 px-12">
     <ul class="flex text-sm justify-between">
     {% assign pClass = 'text-center' %}
-      <li class="{{pClass}}">
-        {{ block.icon1 | img_url: '100x' | img_tag }}
+      <li class="{{pClass}}"> 
+        {{ block.icon1 | image_url: width :"100px" | image_tag: width:nil, class: "p-2 rounded-full border-solid border border-black-300" }}
         <p>{{ block.text1 }}</p>
       </li>
       <li class="{{pClass}}">
-        {{ block.icon2 | img_url: '100x' | img_tag }}
+        {{ block.icon2 | image_url: width :"100px" | image_tag: width:nil, class: "p-2 rounded-full border-solid border border-black-300" }}
         <p>{{ block.text2 }}</p>
       </li>
       <li class="{{pClass}}">
-        {{ block.icon3 | img_url: '100x' | img_tag }}
+        {{ block.icon3 | image_url: width :"100px" | image_tag: width:nil, class: "p-2 rounded-full border-solid border border-black-300" }}
         <p>{{ block.text3 }}</p>
       </li>
     </ul>
