--- a/snippets/product-giveaways.liquid
+++ b/snippets/product-giveaways.liquid
@@ -1,21 +1,12 @@
 {%- capture productTabs -%}
-<div section-name="product-giveaways" class="mt-8 rounded-2xl overflow-hidden">
-  <div class="bg-[#f5f5f5] py-4 px-12">
-    <ul class="flex text-sm justify-between">
-    {% assign pClass = 'text-center' %}
-      <li class="{{pClass}}">
-        {{ block.icon1 | img_url: '100x' | img_tag }}
-        <p>{{ block.text1 }}</p>
-      </li>
-      <li class="{{pClass}}">
-        {{ block.icon2 | img_url: '100x' | img_tag }}
-        <p>{{ block.text2 }}</p>
-      </li>
-      <li class="{{pClass}}">
-        {{ block.icon3 | img_url: '100x' | img_tag }}
-        <p>{{ block.text3 }}</p>
-      </li>
-    </ul>
+<div section-name="product-giveaways" class="mb-4 rounded-md shadow overflow-hidden">
+  <div class="flex p-4">
+    {{ block.Image | img_url: '105x' | img_tag }}
+    <div class="ml-4">
+      <p class="text-base font-extrabold mb-0">{{ block.title }}</p>
+      <p class="text-sm line-through mb-0">{{ block.price | money }}</p>
+      <div class="bg-vi rounded-full px-2 text-white text-xs inline-block mt-3">{{ block.tag }}</div>
+    </div>
   </div>
 </div>
 {%- endcapture -%}
