颜色切换轮播板块

--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -22,6 +22,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
 .template-index #header [section-name = 'localization'] select{@apply text-white}
 .template-index .footer-bottom [section-name = 'localization'] select{@apply text-white}
 
+[section-name = 'color-slider-full'] [tag-name = 'color-carousel'] div.is-selected svg{@apply !block}
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
