--- a/assets/custom.css
+++ b/assets/custom.css
@@ -86,6 +86,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+[section-name = 'color-slider-full'] [tag-name = 'color-carousel'] div.is-selected svg{
+  display:block !important;
+}
+
 :root{
   --ft1:'Product Sans';
   --ft2:'Product Sans';
@@ -333,6 +337,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   position:relative;
 }
 
+.bottom-6{
+  bottom:1.5rem;
+}
+
 .left-0{
   left:0px;
 }
@@ -347,6 +355,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .left-4{
   left:1rem;
+}
+
+.left-6{
+  left:1.5rem;
 }
 
 .right-4{
@@ -367,10 +379,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .top-8{
   top:2rem;
-}
-
-.bottom-0{
-  bottom:0px;
 }
 
 .z-20{
@@ -433,6 +441,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .\!mb-0{
   margin-bottom:0px !important;
+}
+
+.-mt-2{
+  margin-top:-0.5rem;
 }
 
 .mb-0{
@@ -523,10 +535,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:2rem;
 }
 
-.mt-\[28\%\]{
-  margin-top:28%;
-}
-
 .mt-auto{
   margin-top:auto;
 }
@@ -567,12 +575,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   height:50%;
 }
 
+.h-7{
+  height:1.75rem;
+}
+
 .h-80{
   height:20rem;
 }
 
 .h-full{
   height:100%;
+}
+
+.h-px{
+  height:1px;
 }
 
 .max-h-9{
@@ -597,6 +613,26 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .w-2\/3{
   width:66.666667%;
+}
+
+.w-24{
+  width:6rem;
+}
+
+.w-32{
+  width:8rem;
+}
+
+.w-40{
+  width:10rem;
+}
+
+.w-48{
+  width:12rem;
+}
+
+.w-7{
+  width:1.75rem;
 }
 
 .w-\[12\.5\%\]{
@@ -734,14 +770,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   border-color:rgb(204 204 204 / var(--tw-border-opacity));
 }
 
+.border-black-800{
+  --tw-border-opacity:1;
+  border-color:rgb(34 34 34 / var(--tw-border-opacity));
+}
+
 .border-white{
   --tw-border-opacity:1;
   border-color:rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-black-400{
-  --tw-border-opacity:1;
-  border-color:rgb(170 170 170 / var(--tw-border-opacity));
 }
 
 .\!bg-transparent{
@@ -758,9 +794,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   background-color:rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200{
+  --tw-bg-opacity:1;
+  background-color:rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-vi{
   --tw-bg-opacity:1;
   background-color:rgb(246 190 0 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity:1;
+  background-color:rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -801,6 +847,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .p-0{
   padding:0px;
+}
+
+.p-1{
+  padding:0.25rem;
 }
 
 .p-2{
@@ -901,6 +951,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .pb-6{
   padding-bottom:1.5rem;
+}
+
+.pb-8{
+  padding-bottom:2rem;
 }
 
 .pb-9{
@@ -1108,6 +1162,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm{
+  --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline{
   outline-style:solid;
 }
@@ -1131,6 +1191,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   transition-property:opacity;
   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration:150ms;
+}
+
+.\!transition-all{
+  transition-property:all !important;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration:150ms !important;
 }
 
 .delay-300{
@@ -1275,18 +1341,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     margin-top:5rem;
   }
 
-  .md\:mt-\[14\%\]{
-    margin-top:14%;
-  }
-
-  .md\:mt-\[20\%\]{
-    margin-top:20%;
-  }
-
-  .md\:mt-\[28\%\]{
-    margin-top:28%;
-  }
-
   .md\:mt-\[15\%\]{
     margin-top:15%;
   }
@@ -1295,12 +1349,28 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     margin-top:22%;
   }
 
+  .md\:mt-\[28\%\]{
+    margin-top:28%;
+  }
+
   .md\:flex{
     display:flex;
   }
 
+  .md\:w-1\/2{
+    width:50%;
+  }
+
+  .md\:w-1\/3{
+    width:33.333333%;
+  }
+
   .md\:w-1\/4{
     width:25%;
+  }
+
+  .md\:w-2\/3{
+    width:66.666667%;
   }
 
   .md\:w-2\/5{
@@ -1327,36 +1397,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     width:62%;
   }
 
-  .md\:w-auto{
-    width:auto;
-  }
-
-  .md\:w-\[40\%\]{
-    width:40%;
-  }
-
-  .md\:w-\[50\%\]{
-    width:50%;
-  }
-
-  .md\:w-\[60\%\]{
-    width:60%;
-  }
-
-  .md\:w-\[75\%\]{
-    width:75%;
-  }
-
-  .md\:w-full{
-    width:100%;
-  }
-
   .md\:w-\[70\%\]{
     width:70%;
   }
 
   .md\:w-\[85\%\]{
     width:85%;
+  }
+
+  .md\:w-auto{
+    width:auto;
+  }
+
+  .md\:w-full{
+    width:100%;
   }
 
   .md\:flex-row{
