--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -109,5 +109,9 @@
 {%- render 'theme-modals' -%}
 {%- if settings.show_sticky_arrow -%}<span id="site-scroll"><i class="at at-arw-up" aria-hidden="true"></i></span>{%- endif -%}
 <script src="{{ 'script-loader.js' | asset_url }}" defer></script>
+
+{% comment %} 提前注册动态生成的类名 {% endcomment %}
+{% comment %} <section class="md:w-1/3 md:w-1/2 md:w-2/3 md:w-full w-16 w-24 w-32 w-40 w-48"></section>  {% endcomment %}
+
 </body>
 </html>
