--- a/assets/custom.css
+++ b/assets/custom.css
@@ -429,6 +429,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-right:auto;
 }
 
+.my-3{
+  margin-top:0.75rem;
+  margin-bottom:0.75rem;
+}
+
 .my-4{
   margin-top:1rem;
   margin-bottom:1rem;
@@ -579,6 +584,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   height:1.75rem;
 }
 
+.h-8{
+  height:2rem;
+}
+
 .h-80{
   height:20rem;
 }
@@ -605,6 +614,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .w-1\/3{
   width:33.333333%;
+}
+
+.w-1\/4{
+  width:25%;
 }
 
 .w-16{
@@ -635,6 +648,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   width:1.75rem;
 }
 
+.w-8{
+  width:2rem;
+}
+
 .w-\[12\.5\%\]{
   width:12.5%;
 }
@@ -649,6 +666,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .-translate-x-1\/2{
   --tw-translate-x:-50%;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-8{
+  --tw-translate-y:-2rem;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -668,6 +690,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .resize{
   resize:both;
+}
+
+.flex-row{
+  flex-direction:row;
 }
 
 .flex-col{
@@ -768,6 +794,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .border-black-300{
   --tw-border-opacity:1;
   border-color:rgb(204 204 204 / var(--tw-border-opacity));
+}
+
+.border-black-700{
+  --tw-border-opacity:1;
+  border-color:rgb(68 68 68 / var(--tw-border-opacity));
 }
 
 .border-black-800{
@@ -1181,6 +1212,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.\!transition-all{
+  transition-property:all !important;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration:150ms !important;
+}
+
 .transition-all{
   transition-property:all;
   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
@@ -1191,12 +1228,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   transition-property:opacity;
   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration:150ms;
-}
-
-.\!transition-all{
-  transition-property:all !important;
-  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1) !important;
-  transition-duration:150ms !important;
 }
 
 .delay-300{
@@ -1279,6 +1310,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   .md\:mx-3{
     margin-left:0.75rem;
     margin-right:0.75rem;
+  }
+
+  .md\:my-6{
+    margin-top:1.5rem;
+    margin-bottom:1.5rem;
   }
 
   .md\:mb-0{
