--- a/sections/video.liquid
+++ b/sections/video.liquid
@@ -2,7 +2,7 @@
 <div class="content-indent{% if secSt.hide_mobile %} hide-sm{% endif %} {{ secSt.top-offeset}} wow fadeIn">
   <div class="wow fadeIn {{secSt.style}}{% unless secSt.section_width %} page-width{% else %} fullwidth npd{% endunless %}" {% if secSt.section_width %}style="--spd:{{ secSt.pad-desk}}px;--spdt:{{ secSt.pad-ipad}}px;--spdm:{{ secSt.pad-mbl}}px;"{% endif %}>  
   	
-   <div class="video-sec{% if secSt.snow_effect %} falling-snow{% endif %}{% if secSt.snow_style == "style2" %} style2{% else %} style1{% endif %}" style="--fs:{{secSt.tfs}}px;--fsm:{{secSt.tfsm}}px;">   
+   <div class="video-sec{% if secSt.rounded %} md:rounded-section rounded-3xl overflow-hidden{% endif %} {% if secSt.snow_effect %} falling-snow{% endif %}{% if secSt.snow_style == "style2" %} style2{% else %} style1{% endif %}" style="--fs:{{secSt.tfs}}px;--fsm:{{secSt.tfsm}}px;">   
       {% if secSt.video_url == blank and secSt.mp4url == blank	%}
       	<div class="video-wrapper">
           <iframe src="//www.youtube.com/embed/_9VUPq3SxOc?rel=0&showinfo=0&vq=720" width="850" height="480" frameborder="0" allowfullscreen></iframe>
@@ -39,62 +39,68 @@
   {
     "name": "Video",
     "class": "index-section",
-    "settings": [	       	
-	 {
-            "type": "select",
-            "id": "top-offeset",
-            "label": "Top OffSet",
-            "default": "default",
-            "options": [
-              {
-                "value": "default",
-                "label": "Default"
-              },
-              {
-                "value": "small",
-                "label": "Small"
-              },
-			  {
-                "value": "none",
-                "label": "None"
-              }
-			]
-        },
-		 {
-		"type":"checkbox",
-		"id":"section_width",
-		"label":"Fullwidth?",
-		"default": false
-	  },
-{
-           "type": "checkbox",
-           "id": "hide_mobile",
-           "label": "Hide Section in Mobile?",
-           "default": false
-        },
-{
-		"type":"checkbox",
-		"id":"snow_effect",
-		"label":"Enable Snow Effect?",
-		"default": false,
-		"info":"For Christmas"
-	   },
-        {
-          "type": "select",
-          "id": "snow_style",
-          "label": "Snow Style",
-          "default": "style1",         
-          "options": [
-            {
+    "settings": [
+      {
+        "type": "select",
+        "id": "top-offeset",
+        "label": "Top OffSet",
+        "default": "default",
+        "options": [
+          {
+            "value": "default",
+            "label": "Default"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "none",
+            "label": "None"
+          }
+        ]
+      },
+      {
+        "type": "checkbox",
+        "id": "section_width",
+        "label": "Fullwidth?",
+        "default": false
+      },
+      {
+        "type": "checkbox",
+        "id": "rounded",
+        "label": "Enable rounded?",
+        "default": true
+      },
+      {
+        "type": "checkbox",
+        "id": "hide_mobile",
+        "label": "Hide Section in Mobile?",
+        "default": false
+      },
+      {
+        "type": "checkbox",
+        "id": "snow_effect",
+        "label": "Enable Snow Effect?",
+        "default": false,
+        "info": "For Christmas"
+      },
+      {
+        "type": "select",
+        "id": "snow_style",
+        "label": "Snow Style",
+        "default": "style1",
+        "options": [
+          {
             "value": "style1",
             "label": "Falling Down"
-            },
-            {
+          },
+          {
             "value": "style2",
             "label": "Falling From Left"
-            }
-            ]
-          }, 		
+          }
+        ]
+      },
       {
         "type": "range",
         "id": "pad-desk",
@@ -121,132 +127,156 @@
         "min": 0,
         "max": 20,
         "step": 1
-      },	
- 		{
+      },
+      {
         "type": "header",
         "content": "YouTube or Vimeo link"
       },
       {
-      "type": "video_url",
-      "id": "video_url",
-      "label": "Video link",
-      "accept": ["youtube", "vimeo"]
-      },     
-	 {
-        "type": "header",
-          "content": "Or MP4 Video [recommended]"
-      }, 
-	 {
-      "type": "textarea",
-      "id": "mp4url",
-      "label": "Mp4 video link",
-	  "info":"Paste video url. Upload and copy video url from Settings --> File. Video  size must not exceed 1 GB. It is shopify limit for video"      
+        "type": "video_url",
+        "id": "video_url",
+        "label": "Video link",
+        "accept": [
+          "youtube",
+          "vimeo"
+        ]
       },
-	  {
+      {
+        "type": "header",
+        "content": "Or MP4 Video [recommended]"
+      },
+      {
+        "type": "textarea",
+        "id": "mp4url",
+        "label": "Mp4 video link",
+        "info": "Paste video url. Upload and copy video url from Settings --> File. Video  size must not exceed 1 GB. It is shopify limit for video"
+      },
+      {
         "type": "textarea",
         "id": "title",
         "label": "Text",
         "default": "Video Text",
-		"info":"Use <strong>text here</strong> to make text bold"
+        "info": "Use <strong>text here</strong> to make text bold"
       },
-       {
+      {
         "type": "color",
         "id": "color_ttl",
         "label": "Text Color",
         "default": "#fff"
-      },	
-      {
-          "type": "range",
-          "id": "tfs",
-          "label": "Font Size",
-          "default": 20,
-          "min": 10,
-          "max": 100,
-          "step": 1,
-          "unit": "px"
       },
       {
-          "type": "range",
-          "id": "tfsm",
-          "label": "Font Size (mobile)",
-          "default": 12,
-          "min": 10,
-          "max": 60,
-          "step": 1,
-          "unit": "px"
+        "type": "range",
+        "id": "tfs",
+        "label": "Font Size",
+        "default": 20,
+        "min": 10,
+        "max": 100,
+        "step": 1,
+        "unit": "px"
       },
-      {	
-           "type": "checkbox",
-           "id": "hide_text",
-           "label": "Hide Text in Mobile?",
-           "default": false,	
-		   "info":"Due to lack of space on mobile device, We advise to hide button or text "
-        },
-	  {
+      {
+        "type": "range",
+        "id": "tfsm",
+        "label": "Font Size (mobile)",
+        "default": 12,
+        "min": 10,
+        "max": 60,
+        "step": 1,
+        "unit": "px"
+      },
+      {
+        "type": "checkbox",
+        "id": "hide_text",
+        "label": "Hide Text in Mobile?",
+        "default": false,
+        "info": "Due to lack of space on mobile device, We advise to hide button or text "
+      },
+      {
         "type": "text",
         "id": "btntxt",
-        "label": "Button Text"        
+        "label": "Button Text"
       },
- 		{
+      {
         "type": "url",
         "id": "btnurl",
-        "label": "Button Url"        
+        "label": "Button Url"
       },
-		{
-           "type": "checkbox",
-           "id": "hide_btn",
-           "label": "Hide Button in Mobile?",
-           "default": false,	
-		   "info":"Due to lack of space on mobile device, We advise to hide button or text "
-        },
-		{
-            "type": "select",
-            "id": "btn-style",
-            "label": "Select Button",
-            "default": "btn",
-            "options": [
-              {
-              "label": "Solid Button 1",
-              "value": "btn"
-              },
-              {
-              "label": "Solid Button 2",
-              "value": "btn2"
-              },
-              {
-              "label": "Solid Button 3",
-              "value": "btn3"
-              },
-              {
-              "label": "Border Button 1",
-              "value": "bdr-btn1"
-              },
-              {
-              "label": "Border Button 2",
-              "value": "bdr-btn2"
-              } 
-            ]
-        },
- 		{
-            "type": "select",
-            "id": "text_align",
-            "label": "Text Position",
-            "default": "left",			
-            "options": [
-              { "label": "Left", "value": "left" },
- 			  { "label": "Left Bottom", "value": "leftbottom" },
-			  { "label": "Top Center", "value": "topcenter" },
-			  { "label": "Center", "value": "center" },
-              { "label": "Bottom Center", "value": "bottomcenter" },
-			  { "label": "Right Bottom", "value": "rightbottom" },
-              { "label": "Right", "value": "right" }
-            ]
-          }	 	
-    ],
- "presets": [
       {
-        "name": "Video"                
-    }
-]
-}
+        "type": "checkbox",
+        "id": "hide_btn",
+        "label": "Hide Button in Mobile?",
+        "default": false,
+        "info": "Due to lack of space on mobile device, We advise to hide button or text "
+      },
+      {
+        "type": "select",
+        "id": "btn-style",
+        "label": "Select Button",
+        "default": "btn",
+        "options": [
+          {
+            "label": "Solid Button 1",
+            "value": "btn"
+          },
+          {
+            "label": "Solid Button 2",
+            "value": "btn2"
+          },
+          {
+            "label": "Solid Button 3",
+            "value": "btn3"
+          },
+          {
+            "label": "Border Button 1",
+            "value": "bdr-btn1"
+          },
+          {
+            "label": "Border Button 2",
+            "value": "bdr-btn2"
+          }
+        ]
+      },
+      {
+        "type": "select",
+        "id": "text_align",
+        "label": "Text Position",
+        "default": "left",
+        "options": [
+          {
+            "label": "Left",
+            "value": "left"
+          },
+          {
+            "label": "Left Bottom",
+            "value": "leftbottom"
+          },
+          {
+            "label": "Top Center",
+            "value": "topcenter"
+          },
+          {
+            "label": "Center",
+            "value": "center"
+          },
+          {
+            "label": "Bottom Center",
+            "value": "bottomcenter"
+          },
+          {
+            "label": "Right Bottom",
+            "value": "rightbottom"
+          },
+          {
+            "label": "Right",
+            "value": "right"
+          }
+        ]
+      }
+    ],
+    "presets": [
+      {
+        "name": "Video"
+      }
+    ]
+  }
 {% endschema %}
