--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,5 +1,9 @@
 /* 动态生成的类名 */
 
+.flickity-button{
+  opacity:1;
+}
+
 [section-name = 'products-slider-full'] .flickity-slider .is-selected{
   opacity:1;
 }
@@ -88,6 +92,54 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 [section-name = 'color-slider-full'] [tag-name = 'color-carousel'] div.is-selected svg{
   display:block !important;
+}
+
+[section-name = 'multiple-image-text'] .flickity-button{
+  --tw-bg-opacity:1;
+  background-color:rgb(68 68 68 / var(--tw-bg-opacity));
+}
+
+[section-name = 'multiple-image-text'] .flickity-button:hover{
+  --tw-bg-opacity:1;
+  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+[section-name = 'multiple-image-text'] .flickity-button-icon{
+  fill:#fff;
+}
+
+@media (min-width: 768px){
+  [section-name = 'multiple-image-text'] .flickity-prev-next-button.previous{
+    left:-3.5rem;
+  }
+
+  [section-name = 'multiple-image-text'] .flickity-prev-next-button.next{
+    right:-3.5rem;
+  }
+}
+
+[section-name = 'products-slider-full'] .flickity-button{
+  --tw-bg-opacity:1;
+  background-color:rgb(68 68 68 / var(--tw-bg-opacity));
+}
+
+[section-name = 'products-slider-full'] .flickity-button:hover{
+  --tw-bg-opacity:1;
+  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+[section-name = 'products-slider-full'] .flickity-button-icon{
+  fill:#fff;
+}
+
+@media (min-width: 768px){
+  [section-name = 'products-slider-full'] .flickity-prev-next-button.previous{
+    left:3rem;
+  }
+
+  [section-name = 'products-slider-full'] .flickity-prev-next-button.next{
+    right:3rem;
+  }
 }
 
 :root{
@@ -442,6 +494,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .my-8{
   margin-top:2rem;
   margin-bottom:2rem;
+}
+
+.mx-3{
+  margin-left:0.75rem;
+  margin-right:0.75rem;
 }
 
 .\!mb-0{
@@ -828,6 +885,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .bg-gray-200{
   --tw-bg-opacity:1;
   background-color:rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-red-500{
+  --tw-bg-opacity:1;
+  background-color:rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-vi{
@@ -1307,6 +1369,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     margin:0px;
   }
 
+  .md\:m-3{
+    margin:0.75rem;
+  }
+
   .md\:mx-3{
     margin-left:0.75rem;
     margin-right:0.75rem;
@@ -1387,6 +1453,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
   .md\:mt-\[28\%\]{
     margin-top:28%;
+  }
+
+  .md\:mr-3{
+    margin-right:0.75rem;
   }
 
   .md\:flex{
@@ -1489,6 +1559,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   .md\:py-20{
     padding-top:5rem;
     padding-bottom:5rem;
+  }
+
+  .md\:px-3{
+    padding-left:0.75rem;
+    padding-right:0.75rem;
   }
 
   .md\:pb-9{
