--- a/sections/multiple-image-text.liquid
+++ b/sections/multiple-image-text.liquid
@@ -1,34 +1,39 @@
 {%- assign secSt = section.settings -%}
 
-<section section-name="multiple-image-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
+{% if secSt.enable_slider %} {% assign ebSlider = true %} {% else %} {% assign ebSlider = false %} {% endif %}
+
+<section section-name="multiple-image-text" class="{% render 'section-interva-set', secSt:secSt %}" >
   <div class="page-width px-4">
     <h1 class="md:text-4_5xl text-3xl text-center md:mb-12 mb-8">{{secSt.title}}</h1>
 
-    <div class="md:flex" >
+    <div {% if ebSlider %}data-flickity='{"pageDots": false, "draggable": false, "autoPlay": true, "cellAlign": "left" }' {% else %} class="md:flex"{% endif %} >
       {% for block in section.blocks %}
       {%- assign blkSt = block.settings -%}
 
-      {% if blkSt.bg_img != blank %}
-      {% if secSt.layout == 'textImg' %}
-        {% assign textImg = true %}
-      {% else %}
-        {% assign textImg = false %}
-      {% endif %}
+      {% if blkSt.bg_img != blank or blkSt.video_url != blank %}
 
-      {% if forloop.length < 3 %}
-      {% assign rounded = 'md:rounded-section' %}
-      {% else %}
-      {% assign rounded = '' %}
-      {% endif %}
+      {% if secSt.layout == 'textImg' %}{% assign textImg = true %} {% else %} {% assign textImg = false %} {% endif %}
+      {% if forloop.length < 3 %} {% assign rounded = 'md:rounded-section' %} {% else %} {% assign rounded = '' %} {% endif %}
 
-      <div class="md:{{blkSt.slide_w}} md:mx-3 last:mr-0 first:ml-0 flex flex-col md:m-0 mb-8 relative">  
-        <div class="{{rounded}} rounded-3xl overflow-hidden h-full {% unless textImg %}md:mb-6 mb-2{% endunless %}" style="background-color:{{blkSt.bg_color}};">
-          {{ blkSt.bg_img | image_url: width: 1200 | image_tag: width: nil, loading: 'lazy', class: "h-full object-cover block" }}
+      <div class="md:{{blkSt.slide_w}} {% unless ebSlider %}md:mx-3 last:mr-0 first:ml-0 {% endunless %} flex flex-col md:m-0 mb-8  relative">  
+        <div class="{{rounded}} rounded-3xl overflow-hidden h-full {% if ebSlider %}mx-2{% endif %} {% unless textImg %}md:mb-6 mb-2{% endunless %}"
+          style="background-color:{{blkSt.bg_color}};">
+
+        {% case block.type %}
+          {% when "image" %}
+            {{ blkSt.bg_img | image_url: width: 1200 | image_tag: width: nil, loading: 'lazy', class: "h-full object-cover block" }}
+          {% else %}
+            <div class="video-wrapper"><iframe src="//www.youtube.com/embed/{{ blkSt.video_url.id }}?rel=0&showinfo=0&vq=720" width="850" height="480" frameborder="0" allowfullscreen></iframe></div>
+        {% endcase %}
+
         </div>
-        <section class="{% if textImg %}absolute bottom-6 left-6 text-white{% endif %}">
-          <h1 class="{% if textImg %}md:text-xl text-lg mb-1 {% else %} md:text-3xl text-2xl md:mb-2 mb-0{% endif %}">{{ blkSt.text_main  }}</h1>
-          <p class="{% if textImg %}text-base{% else %}text-lg{% endif %}">{{ blkSt.text_sub  }}</p>
-        </section>
+        {% if blkSt.text_main != blank %}
+          <section class="{% if textImg %}absolute bottom-6 left-6 text-white{% endif %}">
+            <h1 class="{% if textImg %}md:text-xl text-lg mb-1 {% else %} md:text-3xl text-2xl md:mb-2 mb-0{% endif %}">{{ blkSt.text_main  }}</h1>
+            <p class="{% if textImg %}text-base{% else %}text-lg{% endif %}">{{ blkSt.text_sub  }}</p>
+          </section>
+        {% endif %}
+
       </div>
       {% endif %}
 
@@ -138,6 +143,12 @@
       },
  		  {
         "type": "checkbox",
+        "id": "enable_slider",
+        "label": "Enable slider",
+        "default": false
+      },
+ 		  {
+        "type": "checkbox",
         "id": "bottom_line",
         "label": "Enable bottom line",
         "default": false
@@ -145,8 +156,8 @@
     ],
     "blocks": [
       {
-        "name": "Slide",
-        "type": "slide",
+        "name": "Image slide",
+        "type": "image",
         "settings": [
           {
             "type": "select",
@@ -176,6 +187,58 @@
             "type": "image_picker",
             "id": "bg_img",
             "label": "Slide image"
+          },
+          {
+            "type": "text",
+            "id": "text_main",
+            "label": "Title",
+            "default": "Find Dealers Near You"
+          },
+          {
+            "type": "text",
+            "id": "text_sub",
+            "label": "Sub title",
+            "default": "Test Ride & Buy Directly"
+          },
+          {
+            "type": "url",
+            "id": "url",
+            "label": "Button link"
+          }
+        ]
+      },      {
+        "name": "Video slide",
+        "type": "video",
+        "settings": [
+          {
+            "type": "select",
+            "id": "slide_w",
+            "label": "Slide width",
+            "options": [
+              {
+                "value": "w-1/3",
+                "label": "1/3"
+              },
+              {
+                "value": "w-2/3",
+                "label": "2/3"
+              },
+              {
+                "value": "w-full",
+                "label": "full"
+              }
+            ]
+          },
+          {
+            "type": "color",
+            "id": "bg_color",
+            "label": "Background color"
+          },
+          {
+          "type": "video_url",
+          "id": "video_url",
+          "label": "Video link",
+          "accept": ["youtube"]
           },
           {
             "type": "text",
