--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -1,6 +1,7 @@
 
 /* 动态生成的类名 */
 .flickity-button{@apply opacity-100}
+.shopify-section .grid{@apply flex}
 
 [section-name = 'products-slider-full'] .flickity-slider .is-selected{@apply opacity-100}
 [section-name = 'products-slider-full'] .flickity-slider .is-selected [tag-name = 'product-info']{@apply opacity-100}
@@ -8,6 +9,8 @@
 
 [section-name = 'logo-slider'] .flickity-slider .is-selected img{@apply grayscale-0 scale-100}
 [section-name = 'logo-slider'] .flickity-enabled.is-fade .flickity-slider>*{@apply duration-150 ease-linear}
+[section-name = 'logo-slider'] .flickity-page-dots .dot{@apply rounded-none w-4 h-1 pointer-events-none}
+[section-name = 'logo-slider'] .flickity-page-dots .dot.is-selected{@apply w-5}
 
 [section-name = 'store-features'] [tag-name = 'features-header'] .h3{@apply md:text-4_5xl text-3xl mb-7}
 [section-name = 'store-features'] [tag-name = 'features-header'] p{@apply text-xl px-4}
