--- a/assets/custom.css
+++ b/assets/custom.css
@@ -4,6 +4,10 @@
   opacity:1;
 }
 
+.shopify-section .grid{
+  display:flex;
+}
+
 [section-name = 'products-slider-full'] .flickity-slider .is-selected{
   opacity:1;
 }
@@ -29,6 +33,17 @@
 [section-name = 'logo-slider'] .flickity-enabled.is-fade .flickity-slider>*{
   transition-duration:150ms;
   transition-timing-function:linear;
+}
+
+[section-name = 'logo-slider'] .flickity-page-dots .dot{
+  pointer-events:none;
+  height:0.25rem;
+  width:1rem;
+  border-radius:0px;
+}
+
+[section-name = 'logo-slider'] .flickity-page-dots .dot.is-selected{
+  width:1.25rem;
 }
 
 [section-name = 'store-features'] [tag-name = 'features-header'] .h3{
@@ -496,11 +511,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-bottom:2rem;
 }
 
-.mx-3{
-  margin-left:0.75rem;
-  margin-right:0.75rem;
-}
-
 .\!mb-0{
   margin-bottom:0px !important;
 }
@@ -885,11 +895,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 .bg-gray-200{
   --tw-bg-opacity:1;
   background-color:rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-red-500{
-  --tw-bg-opacity:1;
-  background-color:rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-vi{
@@ -1369,10 +1374,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     margin:0px;
   }
 
-  .md\:m-3{
-    margin:0.75rem;
-  }
-
   .md\:mx-3{
     margin-left:0.75rem;
     margin-right:0.75rem;
@@ -1453,10 +1454,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
   .md\:mt-\[28\%\]{
     margin-top:28%;
-  }
-
-  .md\:mr-3{
-    margin-right:0.75rem;
   }
 
   .md\:flex{
@@ -1559,11 +1556,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   .md\:py-20{
     padding-top:5rem;
     padding-bottom:5rem;
-  }
-
-  .md\:px-3{
-    padding-left:0.75rem;
-    padding-right:0.75rem;
   }
 
   .md\:pb-9{
